jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL1-ending-QUOTATION_MARK.shex
# STRING_LITERAL1 ending with QUOTATION MARK
# source: turtle-syntax-bad-string-02.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ['abc"]
}
